<?xml version="1.0"?>
<package format="2">
  <name>blame_the_mechy</name>
  <version>1.0.0</version>
  <description>The blame_the_mechy package</description>

  <maintainer email="ezrabk@gmail.com">Ezra Bailey-Kelly</maintainer>


  <license>MIT</license>
  <url type="website">unlaero.space/lunabotics</url>
  <author email="ezrabk@gmail.com">Ezra Bailey-Kelly</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
